--- a/_ecies-build/index.html
+++ b/_ecies-build/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ECIE</title>
+    <title>ECIE encoding page</title>
     <script  type="module" src="ecies-form.js"></script>
     <script type="module">
         import { setup } from './ecies-form.js';
@@ -15,7 +15,7 @@
     </script>
 </head>
 <body>
-    <h2>Encrypt message locally</h2>
+<h2>Encrypt message locally(built from : <a href="{{ site.github.repository_url }}/commit/{{ site.github.build_revision }}">{{ site.github.build_revision }}</a>)</h2>
     <form  id="ecies-form" onsubmit="event.preventDefault()">
         <div style="display: grid">
             <label>
