--- a/ecies/index.html
+++ b/ecies/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ECIE</title>
+    <title>ECIE encoding page</title>
   <script type="module" crossorigin src="./index.js"></script>
 </head>
 <body>
-    <h2>Encrypt message locally</h2>
+<h2>Encrypt message locally(built from : <a href="{{ site.github.repository_url }}/commit/{{ site.github.build_revision }}">{{ site.github.build_revision }}</a>)</h2>
     <form  id="ecies-form" onsubmit="event.preventDefault()">
         <div style="display: grid">
             <label>
