--- a/ecies/index.html
+++ b/ecies/index.html
@@ -1,7 +1,3 @@
----
-food: Pizza
-test: {{ site.github.repository_url }}
----
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +6,7 @@ test: {{ site.github.repository_url }}
   <script type="module" crossorigin src="./index.js"></script>
 </head>
 <body>
-<h2>Encrypt message locally(built from {{ page.food }}>{{ page.test }} : <a href="{{ site.github.repository_url }}/commit/{{ site.github.build_revision }}">{{ site.github.build_revision }}</a>)</h2>
+<h2>Encrypt message locally(built from: <a href="{{ site.github.repository_url }}/commit/{{ site.github.build_revision }}">{{ site.github.build_revision }}</a>)</h2>
     <form  id="ecies-form" onsubmit="event.preventDefault()">
         <div style="display: grid">
             <label>
